tests/baselines/reference/assignmentStricterConstraints.errors.txt
tests/cases/compiler/assignmentStricterConstraints.ts(7,1): error TS2322: Type '<T, S extends T>(x: T, y: S) => void' is not assignable to type '<T, S>(x: T, y: S) => void'.
  Types of parameters 'y' and 'y' are incompatible.
    Type 'S' is not assignable to type 'T'.
      'S' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.


==== tests/cases/compiler/assignmentStricterConstraints.ts (1 errors) ====
    var f = function <T, S extends T>(x: T, y: S): void {
        x = y
    }
    
    var g = function <T, S>(x: T, y: S): void { }
    
    g = f
    ~
!!! error TS2322: Type '<T, S extends T>(x: T, y: S) => void' is not assignable to type '<T, S>(x: T, y: S) => void'.
!!! error TS2322:   Types of parameters 'y' and 'y' are incompatible.
!!! error TS2322:     Type 'S' is not assignable to type 'T'.
!!! error TS2322:       'S' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
    g(1, "")
    